# abstreet

./: Cargo.toml
convert_osm/src/: osm_reader.rs
ezgui/examples/: demo.rs
ezgui/src/: assets.rs  backend_glium.rs  backend_glow.rs  backend_wasm.rs  canvas.rs  event_ctx.rs  input.rs  managed.rs  runner.rs  screen_geom.rs
ezgui/src/shaders/: fragment_140.glsl  vertex_140.glsl
ezgui/src/widgets/: button.rs
fifteen_min/src/: find_home.rs  viewer.rs
game/: Cargo.toml
game/src/: options.rs
game/src/challenges/: cutscene.rs  mod.rs  prebake.rs
game/src/common/: minimap.rs  mod.rs  warp.rs
game/src/debug/: blocked_by.rs  floodfill.rs  mod.rs  path_counter.rs  polygons.rs  routes.rs  uber_turns.rs
game/src/devtools/: collisions.rs  destinations.rs  kml.rs  mapping.rs  mod.rs  polygon.rs  scenario.rs  story.rs
game/src/edit/: bulk.rs  lanes.rs  mod.rs  (+3 more)
geom/src/: distance.rs  polygon.rs  ring.rs
headless/: Cargo.toml
importer/: Cargo.toml
map_editor/src/: edit.rs  main.rs
map_gui/: Cargo.toml
map_gui/src/: load.rs  options.rs
map_model/src/: raw.rs
osm_viewer/src/: viewer.rs
parking_mapper/: Cargo.toml
parking_mapper/src/: mapper.rs
popdat/: Cargo.toml
popdat/src/: distribute_people.rs  import_census.rs  lib.rs
rustdoc/ezgui/: index.html  struct.Choice.html
santa/src/: after_level.rs  before_level.rs  buildings.rs  game.rs  title.rs
sim/src/: analytics.rs  render.rs
trafficsim/: index.html
updater/: Cargo.toml
widgetry/: Cargo.toml
widgetry/src/: event.rs  event_ctx.rs  lib.rs  text.rs
widgetry_demo/src/: lib.rs
(+88 files in other folders)
