[package]
name = "updater"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
abstutil = { path = "../abstutil" }
flate2 = "1.0.19"
geom = { path = "../geom" }
md5 = "0.7.0"
reqwest = { version = "*", default-features=false, features=["rustls-tls"] }
tokio = { version = "*", features = ["full"] }
walkdir = "2.3.1"
